python/tests/gold/tlsinvalidsecret/snapshots/aconf.json
{
    "_errors": {},
    "_notices": {
        "tlsinvalidsecret-http.default.1": [
            "apiVersion ambassador/v0 is deprecated, consider upgrading"
        ],
        "tlsinvalidsecret.default.1": [
            "apiVersion ambassador/v0 is deprecated, consider upgrading"
        ]
    },
    "_sources": {
        "--diagnostics--": {
            "_referenced_by": {},
            "apiVersion": "getambassador.io/v0",
            "description": "The '--diagnostics--' source marks objects created by Ambassador to assist with diagnostic output.",
            "kind": "Diagnostics",
            "location": "--diagnostics--",
            "name": "Ambassador Diagnostics",
            "namespace": null,
            "rkey": "--diagnostics--",
            "serialization": null,
            "version": "getambassador.io/v0"
        },
        "--internal--": {
            "_referenced_by": {},
            "apiVersion": "getambassador.io/v0",
            "description": "The '--internal--' source marks objects created by Ambassador's internal logic.",
            "kind": "Internal",
            "location": "--internal--",
            "name": "Ambassador Internals",
            "namespace": null,
            "rkey": "--internal--",
            "serialization": null,
            "version": "getambassador.io/v0"
        },
        "k8s-tlsinvalidsecret-admin-default": {
            "_referenced_by": {},
            "ambassador_id": "tlsinvalidsecret",
            "apiVersion": "getambassador.io/v2",
            "endpoints": {},
            "kind": "Service",
            "location": "k8s-tlsinvalidsecret-admin-default",
            "metadata_labels": {
                "kat-ambassador-id": "tlsinvalidsecret",
                "scope": "AmbassadorTest",
                "service": "tlsinvalidsecret-admin"
            },
            "name": "tlsinvalidsecret-admin",
            "namespace": "default",
            "rkey": "k8s-tlsinvalidsecret-admin-default",
            "serialization": "ambassador_id: tlsinvalidsecret\napiVersion: getambassador.io/v2\nendpoints: {}\nkind: Service\nmetadata_labels:\n  kat-ambassador-id: tlsinvalidsecret\n  scope: AmbassadorTest\n  service: tlsinvalidsecret-admin\nname: tlsinvalidsecret-admin\nnamespace: default\n"
        },
        "k8s-tlsinvalidsecret-default": {
            "_referenced_by": {},
            "ambassador_id": "tlsinvalidsecret",
            "apiVersion": "getambassador.io/v2",
            "endpoints": {},
            "kind": "Service",
            "location": "k8s-tlsinvalidsecret-default",
            "metadata_labels": {
                "app.kubernetes.io/component": "ambassador-service",
                "kat-ambassador-id": "tlsinvalidsecret",
                "scope": "AmbassadorTest"
            },
            "name": "tlsinvalidsecret",
            "namespace": "default",
            "rkey": "k8s-tlsinvalidsecret-default",
            "serialization": "ambassador_id: tlsinvalidsecret\napiVersion: getambassador.io/v2\nendpoints: {}\nkind: Service\nmetadata_labels:\n  app.kubernetes.io/component: ambassador-service\n  kat-ambassador-id: tlsinvalidsecret\n  scope: AmbassadorTest\nname: tlsinvalidsecret\nnamespace: default\n"
        },
        "k8s-tlsinvalidsecret-http-default": {
            "_referenced_by": {},
            "ambassador_id": "tlsinvalidsecret",
            "apiVersion": "getambassador.io/v2",
            "endpoints": {},
            "kind": "Service",
            "location": "k8s-tlsinvalidsecret-http-default",
            "metadata_labels": {
                "kat-ambassador-id": "tlsinvalidsecret",
                "scope": "AmbassadorTest"
            },
            "name": "tlsinvalidsecret-http",
            "namespace": "default",
            "rkey": "k8s-tlsinvalidsecret-http-default",
            "serialization": "ambassador_id: tlsinvalidsecret\napiVersion: getambassador.io/v2\nendpoints: {}\nkind: Service\nmetadata_labels:\n  kat-ambassador-id: tlsinvalidsecret\n  scope: AmbassadorTest\nname: tlsinvalidsecret-http\nnamespace: default\n"
        },
        "tlsinvalidsecret-http.default.1": {
            "_referenced_by": {},
            "ambassador_id": "tlsinvalidsecret",
            "apiVersion": "getambassador.io/v0",
            "kind": "Mapping",
            "location": "tlsinvalidsecret-http.default.1",
            "metadata_labels": {
                "kat-ambassador-id": "tlsinvalidsecret",
                "scope": "AmbassadorTest"
            },
            "name": "tls_target_mapping",
            "namespace": "default",
            "prefix": "/tls-target/",
            "rkey": "tlsinvalidsecret-http.default.1",
            "serialization": "ambassador_id: tlsinvalidsecret\napiVersion: ambassador/v0\nkind: Mapping\nmetadata_labels:\n  kat-ambassador-id: tlsinvalidsecret\n  scope: AmbassadorTest\nname: tls_target_mapping\nprefix: /tls-target/\nservice: tlsinvalidsecret-http\n",
            "service": "tlsinvalidsecret-http"
        },
        "tlsinvalidsecret.default.1": {
            "_referenced_by": {},
            "ambassador_id": "tlsinvalidsecret",
            "apiVersion": "getambassador.io/v0",
            "config": {
                "bad-path-info": {
                    "cert_chain_file": "/nonesuch",
                    "private_key_file": "/nonesuch"
                },
                "missing-secret-key": {
                    "cert_chain_file": "/nonesuch"
                },
                "server": {
                    "enabled": true,
                    "secret": "test-certs-secret-invalid"
                },
                "validation-without-termination": {
                    "ca_secret": "ambassador-certs",
                    "enabled": true,
                    "secret": "test-certs-secret-invalid"
                }
            },
            "kind": "Module",
            "location": "tlsinvalidsecret.default.1",
            "metadata_labels": {
                "app.kubernetes.io/component": "ambassador-service",
                "kat-ambassador-id": "tlsinvalidsecret",
                "scope": "AmbassadorTest"
            },
            "name": "tls",
            "namespace": "default",
            "rkey": "tlsinvalidsecret.default.1",
            "serialization": "ambassador_id: tlsinvalidsecret\napiVersion: ambassador/v0\nconfig:\n  bad-path-info:\n    cert_chain_file: /nonesuch\n    private_key_file: /nonesuch\n  missing-secret-key:\n    cert_chain_file: /nonesuch\n  server:\n    enabled: true\n    secret: test-certs-secret-invalid\n  validation-without-termination:\n    ca_secret: ambassador-certs\n    enabled: true\n    secret: test-certs-secret-invalid\nkind: Module\nmetadata_labels:\n  app.kubernetes.io/component: ambas [...]
        }
    },
    "mappings": {
        "tls_target_mapping": {
            "ambassador_id": "tlsinvalidsecret",
            "apiVersion": "getambassador.io/v0",
            "kind": "Mapping",
            "metadata_labels": {
                "kat-ambassador-id": "tlsinvalidsecret",
                "scope": "AmbassadorTest"
            },
            "name": "tls_target_mapping",
            "namespace": "default",
            "prefix": "/tls-target/",
            "service": "tlsinvalidsecret-http"
        }
    },
    "modules": {
        "tls": {
            "apiVersion": "getambassador.io/v0",
            "bad-path-info": {
                "cert_chain_file": "/nonesuch",
                "private_key_file": "/nonesuch"
            },
            "kind": "Module",
            "metadata_labels": {
                "app.kubernetes.io/component": "ambassador-service",
                "kat-ambassador-id": "tlsinvalidsecret",
                "scope": "AmbassadorTest"
            },
            "missing-secret-key": {
                "cert_chain_file": "/nonesuch"
            },
            "name": "tls",
            "namespace": "default",
            "server": {
                "enabled": true,
                "secret": "test-certs-secret-invalid"
            },
            "validation-without-termination": {
                "ca_secret": "ambassador-certs",
                "enabled": true,
                "secret": "test-certs-secret-invalid"
            }
        }
    },
    "service": {
        "k8s-tlsinvalidsecret-admin-default": {
            "ambassador_id": "tlsinvalidsecret",
            "apiVersion": "getambassador.io/v2",
            "endpoints": {},
            "kind": "Service",
            "metadata_labels": {
                "kat-ambassador-id": "tlsinvalidsecret",
                "scope": "AmbassadorTest",
                "service": "tlsinvalidsecret-admin"
            },
            "name": "tlsinvalidsecret-admin",
            "namespace": "default"
        },
        "k8s-tlsinvalidsecret-default": {
            "ambassador_id": "tlsinvalidsecret",
            "apiVersion": "getambassador.io/v2",
            "endpoints": {},
            "kind": "Service",
            "metadata_labels": {
                "app.kubernetes.io/component": "ambassador-service",
                "kat-ambassador-id": "tlsinvalidsecret",
                "scope": "AmbassadorTest"
            },
            "name": "tlsinvalidsecret",
            "namespace": "default"
        },
        "k8s-tlsinvalidsecret-http-default": {
            "ambassador_id": "tlsinvalidsecret",
            "apiVersion": "getambassador.io/v2",
            "endpoints": {},
            "kind": "Service",
            "metadata_labels": {
                "kat-ambassador-id": "tlsinvalidsecret",
                "scope": "AmbassadorTest"
            },
            "name": "tlsinvalidsecret-http",
            "namespace": "default"
        }
    }
}
